basicauth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basicauth-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "basicauth-secret"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - local.basicauthtest.com"
spec:
  rules:
  - host: local.basicauthtest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: basicauth-service
            port:
              number: 80
